--- a/client/src/components/css/Header.css
+++ b/client/src/components/css/Header.css
@@ -1,7 +1,4 @@
 header {
-    position: sticky;
-    top: 0;
-    z-index: 1;
     display: flex;
     align-items: center;
     height: 60px;
@@ -45,21 +42,8 @@ header .header-title {
 
 .headroom--pinned {
     position: fixed;
-    transform: translateY(0%);
+    transform: translateY(0);
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.09);
-}
-
-.fade-in {
-    animation: fade-in 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) 0.3s both;
-}
-
-@keyframes fade-in {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
 
 @media (prefers-color-scheme: dark) {
